--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "author": "G_xing <g_xing@163.com>",
   "scripts": {
-    "build": "max build",
-    "dev": "max dev",
+    "build": "cross-env  max build",
+    "dev": "cross-env max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
     "prepare": "husky install",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "cross-env": "^7.0.3",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
