--- a/package.json
+++ b/package.json
@@ -16,17 +16,25 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@umijs/max": "^4.0.28",
-    "antd": "^4.20.7"
+    "antd": "^4.20.7",
+    "highlight.js": "^11.6.0",
+    "marked": "^4.2.2",
+    "simplemde": "^1.11.2"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.7",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/simplemde": "^1.11.8",
     "cross-env": "^7.0.3",
+    "draft-js": "^0.11.7",
+    "easymde": "^2.18.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^2",
     "prettier-plugin-packagejson": "^2",
+    "react-simplemde-editor": "^5.2.0",
     "typescript": "^4.1.2"
   }
 }
