--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/simplemde": "^1.11.8",
+    "@umijs/lint": "^4.0.38",
     "cross-env": "^7.0.3",
     "draft-js": "^0.11.7",
     "easymde": "^2.18.0",
